--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -3,88 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>שליחת הודעת וואטסאפ מהירה</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f0f2f5;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin: 0;
-            }
-            .container {
-                background: white;
-                padding: 20px;
-                border-radius: 10px;
-                box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-                width: 300px;
-                text-align: center;
-            }
-            h2 { color: #25D366; }
-            input, textarea {
-                width: 100%;
-                padding: 10px;
-                margin: 10px 0;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                box-sizing: border-box;
-                font-size: 16px;
-            }
-            button {
-                width: 100%;
-                padding: 10px;
-                background-color: #25D366;
-                color: white;
-                border: none;
-                border-radius: 5px;
-                font-size: 18px;
-                cursor: pointer;
-                transition: background 0.3s;
-            }
-            button:hover {
-                background-color: #128C7E;
-            }
-        </style>
+        <title>מערכת ניהול וואטסאפ</title>
+        <link rel="stylesheet" href="style.css"> <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     </head>
     <body>
+        <div class="main-wrapper" id="main-container">
+            <div class="form-section">
+                <h2>WhatsApp Socket Demo</h2>
 
-        <div class="container">
-            <h2>שלח וואטסאפ</h2>
+                <label for="phone">מספר פלאפון</label><input type="tel" id="phone" placeholder="למשל 0501234567">
+                <label for="message">הודעה</label><textarea id="message" rows="3" placeholder="כתבו כאן את ההודעה..."></textarea>
 
-            <input type="tel" id="phone" placeholder="מספר טלפון (למשל 0501234567)" required>
-            <textarea id="message" rows="4" placeholder="כתבו כאן את ההודעה..."></textarea>
+                <button class="btn-primary" onclick="sendMessage()">שלח הודעה</button>
+                <div id="status-msg">מוכן לפעולה</div>
 
-            <button onclick="sendWhatsApp()">שלח הודעה</button>
+                <div class="action-buttons">
+                    <button class="btn-login" onclick="login()">התחבר</button>
+                    <button class="btn-logout" onclick="logout()">התנתק</button>
+                    <button class="btn-reset" onclick="resetSystem()">איפוס</button>
+                </div>
+            </div>
+
+            <div class="separator" id="divider"></div>
+
+            <div id="qr-section">
+                <h3>QR Code לסריקה</h3>
+                <img id="qr-image" src="" alt="ממתין ל-QR...">
+                <button class="btn-close-qr" onclick="closeQR()">סגור</button>
+            </div>
         </div>
 
-        <script>
-            function sendWhatsApp() {
-                // קבלת הנתונים מהשדות
-                let phone = document.getElementById('phone').value.trim();
-                let message = document.getElementById('message').value;
-
-                if (!phone) {
-                    alert("נא להזין מספר טלפון");
-                    return;
-                }
-
-                // ניקוי המספר מתווים שאינם ספרות
-                phone = phone.replace(/\D/g, '');
-
-                // תיקון אוטומטי למספר ישראלי: אם מתחיל ב-0, מחליפים ב-972
-                if (phone.startsWith('0')) {
-                    phone = '972' + phone.substring(1);
-                }
-
-                // יצירת הקישור לוואטסאפ
-                const url = `https://wa.me/${phone}?text=${encodeURIComponent(message)}`;
-
-                // פתיחת הקישור בחלון חדש
-                window.open(url, '_blank');
-            }
-        </script>
-
+        <script src="script.js"></script>
     </body>
 </html>
