add client logic

--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/WhiskeySockets.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phone-Centric Data Input &amp; Upload</title>
-    <meta name="description" content="A comprehensive communication app with QR code generation, file uploads, audio recording, and more" />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <title>Whatsapp Socket Demo</title>
   </head>
   <body>
     <div id="root"></div>
